{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 1339,
  "lineage": "9ddcc120-1505-8480-22cf-ba13784c78db",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:subnet/subnet-066a4e3eb5aad856c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.10.1.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "test-ivy-1a"
                ]
              }
            ],
            "id": "subnet-066a4e3eb5aad856c",
            "map_public_ip_on_launch": true,
            "owner_id": "198098511860",
            "state": "available",
            "tags": {
              "Name": "test-ivy-1a"
            },
            "vpc_id": "vpc-0d376a59c9162e609"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:subnet/subnet-0942835bed403b57b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.10.2.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "test-ivy-1c"
                ]
              }
            ],
            "id": "subnet-0942835bed403b57b",
            "map_public_ip_on_launch": true,
            "owner_id": "198098511860",
            "state": "available",
            "tags": {
              "Name": "test-ivy-1c"
            },
            "vpc_id": "vpc-0d376a59c9162e609"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:subnet/subnet-09e018656e945d6d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.10.3.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "test-ivy-1d"
                ]
              }
            ],
            "id": "subnet-09e018656e945d6d0",
            "map_public_ip_on_launch": true,
            "owner_id": "198098511860",
            "state": "available",
            "tags": {
              "Name": "test-ivy-1d"
            },
            "vpc_id": "vpc-0d376a59c9162e609"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_az1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:subnet/subnet-0c6f58b71e969f7a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.10.64.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "test-ivy-private_1a"
                ]
              }
            ],
            "id": "subnet-0c6f58b71e969f7a9",
            "map_public_ip_on_launch": false,
            "owner_id": "198098511860",
            "state": "available",
            "tags": {
              "Name": "test-ivy-private_1a"
            },
            "vpc_id": "vpc-0d376a59c9162e609"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_az2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:subnet/subnet-02d1e48d204a39599",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.10.65.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "test-ivy-private_1c"
                ]
              }
            ],
            "id": "subnet-02d1e48d204a39599",
            "map_public_ip_on_launch": false,
            "owner_id": "198098511860",
            "state": "available",
            "tags": {
              "Name": "test-ivy-private_1c"
            },
            "vpc_id": "vpc-0d376a59c9162e609"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_az3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:subnet/subnet-0119c523d705d31a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.10.66.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "test-ivy-private_1d"
                ]
              }
            ],
            "id": "subnet-0119c523d705d31a7",
            "map_public_ip_on_launch": false,
            "owner_id": "198098511860",
            "state": "available",
            "tags": {
              "Name": "test-ivy-private_1d"
            },
            "vpc_id": "vpc-0d376a59c9162e609"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:vpc/vpc-0d376a59c9162e609",
            "cidr_block": "10.10.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0771acb42f63d1574",
                "cidr_block": "10.10.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-3233cf55",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "test-ivy"
                ]
              }
            ],
            "id": "vpc-0d376a59c9162e609",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-085bd78db1b7e4290",
            "owner_id": "198098511860",
            "state": "available",
            "tags": {
              "Name": "test-ivy"
            }
          }
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "test-ivy-alb-log",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:198098511860:loadbalancer/app/test-ivy/1022c07764f906df",
            "arn_suffix": "app/test-ivy/1022c07764f906df",
            "dns_name": "test-ivy-622356541.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:198098511860:loadbalancer/app/test-ivy/1022c07764f906df",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-ivy",
            "security_groups": [
              "sg-02bf35fc6bb1cb0ea",
              "sg-0f0735865c82c1ea5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-066a4e3eb5aad856c"
              },
              {
                "subnet_id": "subnet-0942835bed403b57b"
              },
              {
                "subnet_id": "subnet-09e018656e945d6d0"
              }
            ],
            "subnets": [
              "subnet-066a4e3eb5aad856c",
              "subnet-0942835bed403b57b",
              "subnet-09e018656e945d6d0"
            ],
            "vpc_id": "vpc-0d376a59c9162e609",
            "zone_id": "Z14GRHDCWA56QT"
          }
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:198098511860:listener/app/test-ivy/1022c07764f906df/45dc3638ac68ed4e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:198098511860:listener/app/test-ivy/1022c07764f906df/45dc3638ac68ed4e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:198098511860:loadbalancer/app/test-ivy/1022c07764f906df",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.this"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:198098511860:listener/app/test-ivy/1022c07764f906df/6f12504d4ec043c3",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:198098511860:certificate/d0c81f77-9525-4486-acf0-6a95f4ef6f38",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "ok",
                    "status_code": "200"
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:198098511860:listener/app/test-ivy/1022c07764f906df/6f12504d4ec043c3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:198098511860:loadbalancer/app/test-ivy/1022c07764f906df",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.this"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-ivy",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:security-group/sg-098dbe72affed6107",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098dbe72affed6107",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-sg",
            "name_prefix": null,
            "owner_id": "198098511860",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0d376a59c9162e609"
          }
        }
      ]
    },
    {
      "module": "module.http_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-ivy",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:security-group/sg-0f0735865c82c1ea5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f0735865c82c1ea5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http-sg",
            "name_prefix": null,
            "owner_id": "198098511860",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0d376a59c9162e609"
          }
        }
      ]
    },
    {
      "module": "module.https_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-ivy",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:security-group/sg-02bf35fc6bb1cb0ea",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02bf35fc6bb1cb0ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "https-sg",
            "name_prefix": null,
            "owner_id": "198098511860",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0d376a59c9162e609"
          }
        }
      ]
    },
    {
      "module": "module.redis_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-ivy",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:security-group/sg-0f6746ffe3e5551d9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f6746ffe3e5551d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "redis-sg",
            "name_prefix": null,
            "owner_id": "198098511860",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0d376a59c9162e609"
          }
        }
      ]
    },
    {
      "module": "module.mysql_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-ivy",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:security-group/sg-07adf8ff7dc6bf298",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07adf8ff7dc6bf298",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mysql-sg",
            "name_prefix": null,
            "owner_id": "198098511860",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0d376a59c9162e609"
          }
        }
      ]
    },
    {
      "module": "module.nginx_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2807852200",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-098dbe72affed6107",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.test-ivy"
          ]
        }
      ]
    },
    {
      "module": "module.http_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3151830379",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f0735865c82c1ea5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.test-ivy"
          ]
        }
      ]
    },
    {
      "module": "module.https_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-22027530",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02bf35fc6bb1cb0ea",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.test-ivy"
          ]
        }
      ]
    },
    {
      "module": "module.redis_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-662677883",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f6746ffe3e5551d9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.test-ivy"
          ]
        }
      ]
    },
    {
      "module": "module.mysql_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-208372689",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07adf8ff7dc6bf298",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.test-ivy"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1864999633",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-098dbe72affed6107",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.test-ivy"
          ]
        }
      ]
    },
    {
      "module": "module.http_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3120313132",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f0735865c82c1ea5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.test-ivy"
          ]
        }
      ]
    },
    {
      "module": "module.https_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1390165533",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02bf35fc6bb1cb0ea",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.test-ivy"
          ]
        }
      ]
    },
    {
      "module": "module.redis_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": "",
            "from_port": 6379,
            "id": "sgrule-571710585",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f6746ffe3e5551d9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.test-ivy"
          ]
        }
      ]
    },
    {
      "module": "module.mysql_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-3304432310",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07adf8ff7dc6bf298",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.test-ivy"
          ]
        }
      ]
    }
  ]
}